Fixed code by implementing reduced print function - can now turn pins on and off.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ else ()
 endif ()
 
 include_directories(
-Inc Drivers/STM32F0xx_HAL_Driver/Inc Drivers/STM32F0xx_HAL_Driver/Inc/Legacy Drivers/CMSIS/Device/ST/STM32F0xx/Include Drivers/CMSIS/Include Inc Drivers/STM32F0xx_HAL_Driver/Inc Drivers/STM32F0xx_HAL_Driver/Inc/Legacy Middlewares/Third_Party/FreeRTOS/Source/include Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM0 Drivers/CMSIS/Device/ST/STM32F0xx/Include Drivers/CMSIS/Include
+Inc Drivers/STM32F0xx_HAL_Driver/Inc Drivers/STM32F0xx_HAL_Driver/Inc/Legacy Drivers/CMSIS/Device/ST/STM32F0xx/Include Drivers/CMSIS/Include Middlewares/Third_Party/FreeRTOS/Source/include Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM0 Inc Drivers/STM32F0xx_HAL_Driver/Inc Drivers/STM32F0xx_HAL_Driver/Inc/Legacy Middlewares/Third_Party/FreeRTOS/Source/include Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM0 Drivers/CMSIS/Device/ST/STM32F0xx/Include Drivers/CMSIS/Include
 UOSM-Core/Inc
 UOSM-Core/Drivers
 UOSM-Core/Modules
@@ -59,7 +59,7 @@ UOSM-Core/Utils
 
 add_definitions(-DDEBUG -DUSE_HAL_DRIVER -DSTM32F030x6 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F030x6)
 
-file(GLOB_RECURSE SOURCES "Startup/*.*" "Src/*.*" "Drivers/*.*" "Startup/*.*" "Src/*.*" "Middlewares/*.*" "Drivers/*.*" "UOSM-Core/*.*" )
+file(GLOB_RECURSE SOURCES "Startup/*.*" "Src/*.*" "Drivers/*.*" "Startup/*.*" "Src/*.*" "Middlewares/*.*" "Drivers/*.*" "Src/*.*" "UOSM-Core/*.*" )
 
 set(LINKER_SCRIPT ${CMAKE_SOURCE_DIR}/STM32F030F4PX_FLASH.ld)
 
